...
  handleBackTo: () => void;
};

export function Header({ title, bgMode, handleBackTo }: Props) {
  return (
    <HStack alignItems={'center'} space={4} mb={6}>
      <TouchableOpacity testID="btn-back" onPress={handleBackTo}>
        <ChevronLeftIcon size="30" color={bgMode ? '#FFFFFF' : '#052B3B'} />
      </TouchableOpacity>

      <Text
        color={bgMode ? 'white' : 'gray.900'}
        fontSize={20}
...
