...
        <HStack
          flex={1}
          mt={6}
          alignItems="center"
          justifyContent="space-between"
        >
          <FitnessCard title="Calorias" value="2124" unit="kcal" />
          <FitnessCard title="Sono" value="51" unit="h" />
        </HStack>

        <HStack
          flex={1}
          mt={6}
...
