...
        fontSize={32}
        fontWeight={800}
        lineHeight={38}
        letterSpacing={-1.2}
        mb={3}
      >
        Entre
      </Text>

      <Text
        color="gray.60"
        fontSize={16}
        fontWeight={500}
...
        />
      </Stack>

      <Button
        variant="primary"
        size="full"
        title="Conecte-se"
        mt={10}
        icon={<UserIcon />}
      />

      <Flex
        direction="row"
...
