...
          </VStack>
        </Center>
      )}

      <KeyboardAvoidingView behavior="padding">
        <ScrollView ref={scrollRef} showsVerticalScrollIndicator={false}>
          <Flex testID="screen-signup" justify="space-between" mx={6} py={32} h="100%">

            <Text color="gray.900" fontSize={32} fontWeight={800} lineHeight={38} letterSpacing={-1.2} mb={2}>
              Cadastre-se
            </Text>

          <Stack mt={2} space={6}>
            <Controller
              control={control}
              name="name"
...
