...
    }
  }

  return (
    <KeyboardAvoidingView behavior="padding" style={{ flex: 1 }} keyboardVerticalOffset={0} enabled>
      <ScrollView ref={scrollRef} showsVerticalScrollIndicator={false}>
        <VStack testID="screen-forgot-password" flex={1} py={20} pb={16}>
          <HeaderTitle title="Esqueci minha senha" withBackButton={() => navigation.navigate('signIn')} />

          <Image source={Vector} alt="Vetor" resizeMode="stretch" h={80} mt={4} />

          <Flex mx={6}>
            <Stack mt={6} space={6}>
...
